tdf#165047 sw mso-compat layout: always consolidate top margin

This improves 25.8 commit ae7900dd42a65aaf60df6b21b9ad511496b209d9
    tdf#164095 sw: fix missing top margin on paragraph
                   after changing page style
which was backported to 24.8.5.

The problem is that you can't just simply apply the top margin.
Even though it may be across a page break,
or even in a different section,
the already-applied, previous paragraph's bottom margin
needs to be "removed" from this paragraph's top margin.

make CppunitTest_sw_ooxmlexport22 \
    CPPUNIT_TEST_NAME=testTdf165047_consolidatedTopMargin

Change-Id: I1ca5a6173cc5ae5a06adaf38a3292f556a81a48d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183619
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183649
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>